[package]
name = "page"
version = "0.1.0"
authors = ["Orion Free <orion@orion.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "page"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.18"

[dependencies]
neon = "0.1.18"
handlebars = "0.25.*"
rustc-serialize = "*"
glob = "*"
markdown = "0.1"
horrorshow = "0.5.6"
